test/org/midica/testfiles/failing/eff-cd-src-missing-1.midica
INCLUDE inc/instruments.midica

0: ctrl_dest
0:   .on()

